--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./bootstrap/4.3.1/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="./css/main.css" />
+    <link type="text/css" rel="stylesheet" href="./bootstrap/4.3.1/css/bootstrap.min.css" />
+    <link type="text/css" rel="stylesheet" href="./css/main.css" />
     <title>Open Integrator</title>
   </head>
 
