--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Load the latest version of TensorFlow.js -->
+    <script src="https://unpkg.com/@tensorflow/tfjs"></script>
+    <script src="https://unpkg.com/@tensorflow-models/mobilenet"></script>
+  </head>
+  <body>
+    <div id="console"></div>
+    <!-- Add an image that we will use to test -->
+   <video autoplay playsinline muted id="webcam" width="224" height="224"></video>
+    <!-- Load index.js after the content of the page -->
+    <script src="index.js"></script>
+  </body>
+</html>
+<!-- <html>
+  <head>
     <meta charset="UTF-8">
     <link type="text/css" rel="stylesheet" href="./bootstrap/4.3.1/css/bootstrap.min.css" />
     <link type="text/css" rel="stylesheet" href="./css/main.css" />
@@ -76,4 +90,4 @@
         socket.emit('join', 'Nihao blehhhhhh');
        });
     </script>
-</html>
+</html> -->
