--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div id="console"></div>
     <!-- Add an image that we will use to test -->
-   <video autoplay playsinline muted id="webcam" width="224" height="224"></video>
+   <video autoplay playsinline defaultMuted id="webcam" width="224" height="224"></video>
     <!-- Load index.js after the content of the page -->
     <script src="index.js"></script>
   </body>
